# ucv-ate-s7-SI

./: README.md  pyproject.toml
.github/: ci.yml
conf/base/: catalog.yml
src/new_kedro_project/: pipeline_registry.py  settings.py
src/new_kedro_project/pipelines/image_processing/: nodes.py  pipeline.py
tests/: test_image_processing.py
